--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,4 +48,4 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 8.6
-          arguments: check -i
+          arguments: :lessons:check :ok-marketplace-be:check :picture-world:check -i
