--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 8.6
-          arguments: check -i
+          arguments: :lessons:check :ok-marketplace-be:check :picture-world:check -i
 
 #      - name: Report unit tests
 #        uses: dorny/test-reporter@v1
